--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>SearhEngine</title>
 </head>
 <body>
-    <a href="http://192.168.1.5:3000/"></a>
+    <a href="http://192.168.1.5:3000/">ABRIR</a>
 </body>
 </html>
